Disabled click interactions on the Resources page for USER view

--- a/ressources/templates/ressources.html
+++ b/ressources/templates/ressources.html
@@ -390,8 +390,20 @@
                             </thead>
                                 <tbody>
                                     {% for ressource in ressources %}
+                                    {% if user_role == 'ADMIN' or user_role == 'MANAGER' %}
                                     <tr class="border-t border-t-[#e3dfd3] cursor-pointer hover:bg-[#f1efe9]" onclick="window.location.href='/ressources/details/{{ ressource.id }}/'">
+                                    {% else %}
+                                    <tr class="border-t border-t-[#e3dfd3]">
+                                    {% endif %}
+                                        {% if ressource.id == user.id %}
+                                        <td class="whitespace-nowrap px-4 py-5 font-medium text-center">
+                                            <a href="/ressources/details/{{ ressource.id }}/" class="text-[#A08D80] hover:underline cursor-pointer">
+                                                {{ ressource.first_name }} {{ ressource.last_name }}
+                                            </a>
+                                        </td>
+                                        {% else %}
                                         <td class="whitespace-nowrap px-4 py-5 font-medium text-center">{{ ressource.first_name }} {{ ressource.last_name }}</td>
+                                        {% endif %}
                                         <td class="px-4 py-5 text-[#8c7e5a] text-center">{{ ressource.role }}</td>
                                         {% if user_role == 'ADMIN' or user_role == 'MANAGER' %}
                                         <td class="status-cell px-4 py-5 text-center">
